Changed the name and fixed the console log

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-world",
+  "name": "hello-world-special",
   "version": "1.0.0",
   "description": "NPM module that outputs \"Hello, World\" ",
   "main": "index.js",
